# transcript

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  collins_speech.txt  collins_speech_best.txt  collins_speech_best2.txt  collins_speech_medium.txt  collins_speech_transcript.md  diarization.py  download.py  merge.py  output.py  pyproject.toml  requirements.txt  shared.py  slides.py  slides_transcript.json  slides_transcript_compact.json  speech_transcriber.py  test_diarization.py  test_download.py  test_merge.py  test_output.py  test_shared.py  test_slides.py  test_speech_transcriber.py  test_transcriber.py  test_transcription.py  transcriber.py  transcription.py  youtube_captions.en.vtt  youtube_transcript.txt
docs/: ensemble-experiments.md  transcript-sources.md
src/transcribe_critic/: __main__.py  diarization.py  download.py  merge.py  output.py  shared.py  slides.py  summarize.py  transcriber.py  transcription.py
src/transcribe_critic/eval/: __init__.py  convert.py  datasets.py  report.py  run.py  score.py
src/transcript_critic/: __main__.py  diarization.py  download.py  merge.py  output.py  slides.py  transcriber.py  transcription.py
tests/: conftest.py  test_diarization.py  test_download.py  test_eval_convert.py  test_eval_datasets.py  test_eval_report.py  test_eval_run.py  test_eval_score.py  test_merge.py  test_output.py  test_pipeline_transitions.py  test_shared.py  test_slides.py  test_summarize.py  test_transcriber.py  test_transcription.py
tools/: clean_pdftotext.py  extract_nyt_html.py
